--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -45,15 +45,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">WalmartGreper</a>
+        <a class="navbar-brand" href="<%= new_query_path %>">WalmartGreper</a>
       </div>
     </div>
 
     <div class="container">
-      <footer>
-        <p>&copy; Company 2015</p>
-      </footer>
-
+      <%= yield %>
     </div> <!-- /container -->
 
   </body>
