--- a/app/views/query/create.html.haml
+++ b/app/views/query/create.html.haml
@@ -1,5 +1,5 @@
 - if defined?(@greper) && @greper.parsed_data.present?
   - @greper.parsed_data.each do |page, html|
-    = raw Nokogiri.parse(html).search(".js-customer-review")
+    = raw Nokogiri.parse(html).search(".js-customer-review").search(".js-customer-review").first.search(".js-customer-review-text").text
 - else
   %h4 There is now reviews for this query
